--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  Hi. It's Ibrahim.
+  Hi. Find your train!! 
 
   p Select your train below to see its current schedule.
   #wrapper
