changed folks to travelers

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  Hello folks. Find your train!! 
+  Hello travelers. Find your train! 
 
   p Select your train below to see its current schedule.
   #wrapper
